--- a/BlogPlatform/appsettings.json
+++ b/BlogPlatform/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BloggingDB": "Host=database-1.cro52aqju1wk.us-east-1.rds.amazonaws.com;Port=5432;Database=myDb;Username=postgres;Password=1234567890;"
+  }
 }
