--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BloggingDB": "Host=database-1.cro52aqju1wk.us-east-1.rds.amazonaws.com;Port=5432;Database=init;Username=postgres;Password=1234567890;"
-  }
+  //"ConnectionStrings": {
+    //"BloggingDB": "Host=database-1.cro52aqju1wk.us-east-1.rds.amazonaws.com;Port=5432;Database=init;Username=postgres;Password=1234567890;"
+  //}
 }
